# Github-User-Activity

./: README.md  pyproject.toml
github-user-activity/: fetcher.py  main.py  parser.py
github_user_activity/: __main__.py  fetcher.py  github_activity.py  parser.py
